Fixed overflow problem

--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -5,6 +5,7 @@
     @include breakpoints-up(large) {
       display: flex;
       align-items: center;
+      overflow-x: hidden;
     }
   }
 
